--- a/dashBoard.css
+++ b/dashBoard.css
@@ -9,16 +9,49 @@ body {
 
 #left-sidebar {
 	width: 200px;
-	background-color: #ccc;
-    height: 1400px;
+	background-color: rgb(36,36,36);
+    height: 910px;
+	display: flex;
+	justify-content: center;
+	width: 17%;
 }
 
 #center-content {
 	flex-grow: 1;
-	background-color: #fff;
+	background-color: rgb(252,233,254);
+	width: 66%;
 }
 
 #right-sidebar {
 	width: 200px;
-	background-color: #ccc;
+	background-color: rgb(36,36,36);
+	width: 17%;
+}
+
+#left-logo {
+	width: 90px;
+	height: 90px;
+	padding-top: 64px;
+}
+
+#left-logo img {
+	width: 100%;
+	height: 100%;
+}
+
+#left-sidebar ul {
+	margin: 0;
+	padding: 0;
+	padding-top: 32px;
+	list-style-type: none;
+	display: flex;
+	flex-direction: column;
+}
+
+#left-sidebar ul a {
+	text-decoration: none;
+}
+
+a {
+	color: rgb(234, 198, 199);
 }
