--- a/login.css
+++ b/login.css
@@ -1,81 +1,90 @@
-.container {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-  }
-  
-  form {
-    width: 400px;
-    padding: 32px;
-    border: 5px solid white;
-    border-radius: 30px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-    background-color: rgb(36,36, 36);
+}
+
+#login-form {
+    width: 500px;
+    height: 400px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-    color: white;
-    padding-top: 16px;
-  }
-  
-  input[type="text"],
-  input[type="password"] {
-    padding-top: 16px;
-    width: 300px;
-    height: 30px;
+    gap: 24px;
+    border: 2px solid white;
+    border-radius: 30px;
+    background: rgb(36,36,36);
+}
+
+.inputBox {
+    position: relative;
+    width: 250px;
+}
+
+.inputBox input {
+    width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    font-size: 16px;
-  }
-  
-  #login {
-    margin-bottom: 24px;
-    margin-top: 32px;
-    border: 2px solid white ;
-    border-radius: 30px;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    width: 50%;
-    text-align: center;
-    background-color: rgb(235,198, 198);
-  }
+    border: 1px solid rgba(255, 255, 255,0.25);
+    background: rgb(230, 225, 236);
+    color: black;
+    border-radius: 5px;
+    outline: none;
+    transition: 0.5s;
+}
 
-  #signup {
-    margin-bottom: 20px;
-    border: 2px solid white ;
-    border-radius: 30px;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    width: 50%;
-    text-align: center;
-    background-color: rgb(160,195, 210);
-  }
+.inputBox span {
+    position: absolute;
+    left: 0;
+    padding: 10px;
+    pointer-events: none;
+    font-size: 1em;
+    color: rgb(72, 71, 79);
+    text-transform: uppercase;
+    transition: 0.5s;
+}
 
-  .form-group {
-    display: flex;
-    flex-direction: column;
-  }
+.inputBox input:valid ~ span,
+.inputBox input:focus ~ span {
+    color: rgb(235, 198, 198);
+    transform: translateX(10px) translateY(-7px);
+    font-size: 0.65em;
+    padding: 0 10px;
+    background: rgb(36,36,36);
+    /* border-left: 1px solid rgb(235, 198, 198);
+    border-right: 1px solid rgb(235, 198, 198); */
+}
 
-  #forget {
-    padding-top: 8px;
-    padding-left: 8px;
-  }
+.inputBox input:valid,
+.inputBox input:focus {
+    border: 1px solid rgb(235, 198, 198);
+    background: rgb(63, 62, 62);
+}
 
-  a {
+a {
     text-decoration: none;
-    color: white;
-  }
+    color: rgb(230, 225, 236)
+}
 
-  .form-group input:valid,
-  .form-group input:focus {
-    border: 1px solid black;
-  }
+#login-form button {
+    width: 40%;
+    border-radius: 40px;
+    padding: 12px
+}
+
+
+#login {
+    background-color: rgb(235, 198, 198);
+    border: 2px solid white;
+}
+
+#signup {
+    background-color: rgb(160,195,210);
+    border: 2px solid white;
+}
