--- a/dashBoard.css
+++ b/dashBoard.css
@@ -32,6 +32,8 @@ body {
 	width: 90px;
 	height: 90px;
 	padding-top: 64px;
+	padding-bottom: 30px;
+	padding-left: 30px;
 }
 
 #left-logo img {
@@ -54,4 +56,76 @@ body {
 
 a {
 	color: rgb(234, 198, 199);
+}
+
+.nav-box {
+	display: flex;
+	padding-top: 10px;
+}
+
+.nav-img {
+	width: 40px;
+	height: 30px;
+}
+
+.nav-img img {
+	width: 100%;
+	height: 100%;
+}
+
+.nav-box span {
+	padding-top: 5px;
+	padding-left: 5px;
+	font-size: 1.2em;
+	color: rgb(252,233,254);
+}
+
+#calendar {
+	width: 200px;
+	height: 150px;
+	margin-top: 300px;
+	padding-bottom: 16px;
+	
+}
+
+#calendar img {
+	width: 100%;
+	height: 100%;
+	align-content: flex-end;
+}
+
+#goal {
+	padding-left: 66px;
+	padding-top: 18px;
+	font-size: 1em;
+	color: rgb(252,233,254);
+}
+
+#progress-box {
+	width: 90%;
+	height: 40%;
+}
+
+.progress-img {
+	width: 150px;
+	height: 200px;
+	padding-top: 40px;
+	padding-left: 65px;
+}
+
+.progress-img img {
+	height: 100%;
+	height: 100%;
+}
+
+#sticky-img {
+	margin-top: 300px;
+	padding-left: 70px;
+	width: 175px;
+	height: 175px;
+}
+
+#sticky-img img {
+	width: 100%;
+	height: 100%;
 }
